--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
   "devDependencies": {
     "@angular/compiler-cli": "~8.2.0",
     "@ngtools/webpack": "~8.2.0",
+    "@types/jasmine": "^3.4.0",
     "nativescript-dev-webpack": "~1.1.0",
+    "tslint": "^5.20.0",
     "typescript": "~3.5.3"
   },
   "gitHead": "42f2a6a9c94eaf9c68d2a41e0daaa1a2544bc28f",
