--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/compiler-cli": "~8.2.0",
     "@ngtools/webpack": "~8.2.0",
     "@types/jasmine": "^3.4.0",
+    "codelyzer": "^5.1.0",
     "nativescript-dev-webpack": "~1.1.0",
     "tslint": "^5.20.0",
     "typescript": "~3.5.3"
