details dialog for viewing photos on map screen

--- a/angular.json
+++ b/angular.json
@@ -13,5 +13,28 @@
       "prefix": "ns"
     }
   },
-  "defaultProject": "hello-world"
+  "defaultProject": "hello-world",
+  "schematics": {
+    "@schematics/angular:component": {
+      "prefix": "app",
+      "styleext": "scss",
+      "lintFix": true
+    },
+    "@schematics/angular:directive": {
+      "prefix": "app",
+      "lintFix": true
+    },
+    "@schematics/angular:pipe": {
+      "lintFix": true
+    },
+    "@schematics/angular:class": {
+      "lintFix": true
+    },
+    "@schematics/angular:module": {
+      "lintFix": true
+    },
+    "@schematics/angular:service": {
+      "lintFix": true
+    }
+  }
 }
