--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
     "nativescript-angular": "~8.2.0",
+    "nativescript-geolocation": "^5.1.0",
+    "nativescript-mapbox": "^4.4.1",
     "nativescript-theme-core": "~1.0.6",
     "reflect-metadata": "~0.1.12",
     "rxjs": "^6.4.0",
