--- a/.update_backup/package.json
+++ b/.update_backup/package.json
@@ -2,10 +2,10 @@
   "nativescript": {
     "id": "org.nativescript.ngnstech4goodph",
     "tns-android": {
-      "version": "6.1.0"
+      "version": "6.0.2"
     },
     "tns-ios": {
-      "version": "6.1.0"
+      "version": "6.0.2"
     }
   },
   "description": "NativeScript Application",
@@ -20,7 +20,7 @@
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
-    "nativescript-angular": "^8.2.1",
+    "nativescript-angular": "~8.2.0",
     "nativescript-geolocation": "^5.1.0",
     "nativescript-google-maps-sdk": "^2.7.0",
     "nativescript-google-maps-utils": "^0.1.3",
@@ -28,16 +28,16 @@
     "reflect-metadata": "~0.1.12",
     "rxjs": "^6.4.0",
     "tns-core-modules": "^6.1.1",
-    "zone.js": "^0.9.1"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular/compiler-cli": "~8.2.0",
     "@ngtools/webpack": "~8.2.0",
     "@types/jasmine": "^3.4.0",
     "codelyzer": "^5.1.0",
-    "nativescript-dev-webpack": "^1.2.0",
+    "nativescript-dev-webpack": "~1.1.0",
     "tslint": "^5.20.0",
-    "typescript": "3.4.5"
+    "typescript": "~3.5.3"
   },
   "gitHead": "42f2a6a9c94eaf9c68d2a41e0daaa1a2544bc28f",
   "readme": "NativeScript Application"
